# veritas

./: CLAUDE.md  PLAN.md  README.md  app.py  pyproject.toml  requirements.txt
eval/: dataset.jsonl  dataset_mini.jsonl
tests/: conftest.py  test_data.py  test_demo.py  test_fcl.py  test_model.py  test_schema.py  test_score.py  test_signals.py
veritas/: __init__.py  cli.py  data.py  demo.py  fcl.py  model.py  schema.py  score.py  signals.py  viz.py
veritas.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
veritas_audit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
